Fix for image visibility Transparent stars for ratings
git-svn-id: http://www.zenphoto.org/svn/trunk@1011 46129fc4-274e-7f48-8cfa-5da4c607681c

--- a/zp-core/plugins/rating/rating.css
+++ b/zp-core/plugins/rating/rating.css
@@ -6,7 +6,7 @@
 		width: 125px;
 		height: 25px;
 		position: relative;
-		background: url(alt_star.gif) top left repeat-x;		
+		background: url(alt_star.png) top left repeat-x;		
 	}
 	.star-rating li{
 		padding:0px;
@@ -26,7 +26,7 @@
 		padding: 0px;
 	}
 	.star-rating li a:hover{
-		background: url(alt_star.gif) left bottom;
+		background: url(alt_star.png) left bottom;
 		z-index: 2;
 		left: 0px;
 	}
@@ -61,7 +61,7 @@
 		width: 125px;
 	}
 	.star-rating li.current-rating{
-		background: url(alt_star.gif) left center;
+		background: url(alt_star.png) left center;
 		position: absolute;
 		height: 25px;
 		display: block;
